--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -181,7 +181,7 @@
              OnChange="LanguageChanged"
              TItem="KeyValuePair<string,string>"
              TItemValue="string"
-             Items="I18n.Languages">
+             Items="GlobalConfiguration.Languages">
 </RadioDialog>
 
 <RadioDialog @bind-Value="theme"
