--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectWeatherDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectWeatherDialog.razor
@@ -7,7 +7,7 @@
                   ValueChanged="ValueChanged"
                   Title="@(I18n.T("SelectWeather"))"
                   ShowText="ShowText"
-                  Items="icons"
+                  Items="GlobalConfiguration.WeatherIcons"
                   ItemValue="it=>it.Key"
                   ItemText="@(item=>I18n.T("Weather." + item.Key))"
                   ItemIcon="it=>it.Value">
@@ -17,7 +17,7 @@
     private Dictionary<string, string> icons = [];
 
     [Inject]
-    private IIconService IconService { get; set; } = default!;
+    private IGlobalConfiguration GlobalConfiguration { get; set; } = default!;
 
     [Parameter]
     public StringNumber? Value { get; set; }
@@ -27,11 +27,4 @@
 
     [Parameter]
     public bool ShowText { get; set; }
-
-    protected override void OnInitialized()
-    {
-        base.OnInitialized();
-
-        icons = IconService.GetWeatherIcons();
-    }
 }
