🐛 fix: The username and signature modifications have no effect

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
@@ -19,7 +19,7 @@
         <MCardText Class="pb-0">
             @if (!MultiLine)
             {
-                <MTextField @bind-Value="internalValue"
+                <MTextField @bind-Value="internalText"
                             @ref="textField"
                             OnEnter="HandleOnEnter"
                             Dense
@@ -38,7 +38,7 @@
             }
             else
             {
-                <MTextarea @bind-Value="internalValue"
+                <MTextarea @bind-Value="internalText"
                            @ref="mTextarea"
                            Class="rounded-lg"
                            HideDetails="@("auto")"
