♻️ refactor: A little optimization

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -16,7 +16,7 @@
                Elevation="0"
                Rounded="@("lg")"
                Ripple="false"
-               OnClick="@(()=>To("user"))">
+               Href="user">
             <MList Style="width:100%;">
                 <MListItem ThreeLine>
                     <MListItemAvatar Class="ml-sm-2 ml-md-4 mr-md-6"
