--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
@@ -44,7 +44,7 @@
                Class="mb-3 my-list-card"
                Elevation="0"
                Rounded="@("lg")"
-               OnClick="()=>To(item.Href!)">
+               Href="@(item.Href)">
             <MList>
                 <MListItem>
                     <MListItemIcon>
