🐛 fix(BetterSearch): When the search content contains HTML tags, the search results are abnormal

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -585,6 +585,7 @@ html.m-overlay-scroll-blocked {
     padding-left: 12px;
     padding-right: 24px;
     white-space: break-spaces;
+    word-break: break-all;
     align-self: stretch;
     flex: 1 1 auto;
     line-height: 1.75rem;
