🆕 feat(SearchPage): After jumping to search results, display HighlightSearch

--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
@@ -2,7 +2,7 @@
 @inherits CardComponentBase<DiaryModel>
 
 <div class="m-sheet @Theme elevation-0 rounded-lg m-card m-card--link diary-card elevation-sm-2--active"
-     @onclick="ToRead"
+     @onclick="HandeOnClick"
      @oncontextmenu="OpenMenu"
      __internal_preventDefault_oncontextmenu>
     <div class="m-list-item m-list-item--dense @Theme" tabindex="-1">
