--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
@@ -11,6 +11,7 @@
                         OverscanCount="30">
                 <DiaryCard @key="item.Id"
                            Value="item"
+                           OnClick="ClickCard"
                            OnMenu="OpenMenu">
                 </DiaryCard>
             </Virtualize>
