--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
@@ -4,7 +4,8 @@
                        Value="@Value"
                        Class="@InternalClass"
                        Style="@Style"
-                       Options="_options">
+                       Options="_options"
+                       OnAfter="OnAfter">
 </VditorMarkdownPreview>
 
 <PreviewImageDialog @bind-Visible="showPreviewImage"
