--- a/src/SwashbucklerDiary.Rcl/Components/TextField/TransparentTextField.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TextField/TransparentTextField.razor
@@ -8,7 +8,7 @@
                      BackgroundColor="transparent"
                      Solo="true"
                      Flat="true"
-                     Autofocus="true"
+                     Autofocus="Autofocus"
                      Clearable="Clearable"
                      HideDetails="@("auto")"
                      Color="@TextFieldColor"
