--- a/src/SwashbucklerDiary.Rcl/Pages/Search/SearchPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Search/SearchPage.razor
@@ -44,7 +44,8 @@
 <ScrollContainer Id="@scrollContainerId">
     <DiaryCardList @bind-Value="Diaries"
                    @bind-Tags="Tags"
-                   NotFoundText="@(I18n.T("Search.Not Found"))">
+                   NotFoundText="@(I18n.T("Search.Not Found"))"
+                   OnClick="ToRead">
     </DiaryCardList>
 </ScrollContainer>
 
