🆕 feat(MarkdownPreview): Support parsing the sharing links of decks for Hearthstone Box, NetEase Dashen, and Travel Mage Campsite

--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
@@ -5,7 +5,7 @@
                        Class="@InternalClass"
                        Style="@Style"
                        Options="_options"
-                       OnAfter="OnAfter">
+                       OnAfter="HandleOnAfter">
 </VditorMarkdownPreview>
 
 <PreviewImageDialog @bind-Visible="showPreviewImage"
