--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
@@ -72,7 +72,7 @@
             <MListItem>
                 <MListItemIcon>
                     <MIcon Class="evident-icon">
-                        mdi-image-text
+                        mdi-alphabetical
                     </MIcon>
                 </MListItemIcon>
                 <MListItemContent>
