--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/searchAppFunction"
+﻿@page "/searchAppFeatures"
 @inherits ImportantComponentBase
 
 <MyAppBar>
@@ -8,8 +8,8 @@
     </MButton>
 
     <TransparentTextField @bind-Value="search"
-                          Placeholder="@(I18n.T("SearchAppFunction.Placeholder"))"
-                          OnInput="UpdateAppFunctions">
+                          Placeholder="@(I18n.T("SearchAppFeatures.Placeholder"))"
+                          OnInput="UpdateAppFeatures">
     </TransparentTextField>
 </MyAppBar>
 
@@ -37,7 +37,7 @@
         </MCard>
     }
 
-    <Virtualize Items="_appFunctions"
+    <Virtualize Items="_appFeatures"
                 ItemSize="@ItemHeight"
                 Context="item">
         <MCard @key="item"
@@ -65,6 +65,6 @@
         </MCard>
     </Virtualize>
 
-    <EmptyResult Show="_appFunctions.Count == 0 && !ShowPrivacyModeItem"></EmptyResult>
+    <EmptyResult Show="_appFeatures.Count == 0 && !ShowPrivacyModeItem"></EmptyResult>
 
 </ScrollContainer>
