--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -504,9 +504,10 @@ html {
 }
 
     .preview-image-dialog__image img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
+        max-width: 100%;
+        max-height: 100%;
+        vertical-align: middle;
+        transform: scale3d(1,1,1);
     }
 
 wc-waterfall > * {
